# build-info-demo

./: .gitignore  README.md
demo/: demo.sh
demo/liba/: CMakeLists.txt  conanfile.py
demo/liba/include/: liba.h
demo/liba/src/: liba.cpp
demo/mypkg/: CMakeLists.txt  conanfile.py
demo/mypkg/include/: mypkg.h
demo/mypkg/src/: mypkg.cpp
